# dev-diary

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
.github/workflows/: deploy.yml  test.yml
functions/api/: _middleware.js  summaries.js
public/: app.js  index.html  style.css
public/data/: daily-2026-02-14.json  daily-2026-02-15.json  daily-2026-02-16.json  daily-2026-02-17.json  daily-2026-02-18.json  daily-2026-02-19.json  daily-2026-02-20.json  daily-2026-02-21.json  daily-2026-02-22.json  daily-2026-02-23.json  daily-2026-02-24.json  daily-2026-02-25.json  daily-2026-02-26.json  daily-2026-02-28.json  daily-2026-03-01.json  daily-2026-03-02.json  daily-2026-03-03.json  daily-2026-03-04.json  daily-2026-03-05.json  daily-2026-03-07.json  daily-2026-03-08.json  daily-2026-03-09.json  daily-2026-03-10.json  daily-2026-03-11.json  daily-2026-03-12.json  index.json  weekly-2026-02-14.json  weekly-2026-02-21.json  weekly-2026-02-28.json  weekly-2026-03-07.json
scripts/: extract.py  generate.py  run.sh  upload.py
tests/: test_extract.py  test_generate.py
