[project]
name = "dev-diary"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "worker/*"]

[tool.coverage.report]
show_missing = true
